Renamed MangaDex.Zip to MangaDex.zip

--- a/MangaDexZip/web/index.html
+++ b/MangaDexZip/web/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>MangaDex.Zip | About</title>
+    <title>MangaDex.zip | About</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.3/dist/darkly/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
 </head>
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Welcome to MangaDex.Zip</h1>
+                <h1>Welcome to MangaDex.zip</h1>
                 <p>MangaDex.zip (<code><strong>mangadex.zip</strong></code>) allows you to download Manga and Chapters on MangaDex, <strong>directly from your browser</strong>.<br>All it takes is to replace the&nbsp;<code>.org</code>&nbsp;part in the URL by&nbsp;<code>.zip</code>.</p>
                 <p></p>
             </div>
