Added og and some details to the homepage

--- a/MangaDexZip/web/index.html
+++ b/MangaDexZip/web/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>MangaDex.zip | About</title>
+    <title>MangaDex.zip | A MangaDex Downloader</title>
+    <meta name="twitter:card" content="summary">
+    <meta property="og:description" content="Download Manga and Chapters from MangaDex, in high quality, free of ads and nonsense.">
+    <meta property="og:type" content="website">
+    <meta name="description" content="Download Manga and Chapters from MangaDex, in high quality, free of ads and nonsense.">
+    <meta property="og:title" content="MangaDex.zip | A MangaDex Downloader">
+    <meta name="twitter:description" content="Download Manga and Chapters from MangaDex, in high quality, free of ads and nonsense.">
+    <meta name="twitter:title" content="MangaDex.zip | A MangaDex Downloader">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.3/dist/darkly/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
 </head>
@@ -13,7 +20,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Welcome to MangaDex.zip</h1>
+                <h1>Welcome to MangaDex.Zip</h1>
                 <p>MangaDex.zip (<code><strong>mangadex.zip</strong></code>) allows you to download Manga and Chapters on MangaDex, <strong>directly from your browser</strong>.<br>All it takes is to replace the&nbsp;<code>.org</code>&nbsp;part in the URL by&nbsp;<code>.zip</code>.</p>
                 <p></p>
             </div>
@@ -63,6 +70,10 @@
                     <li><strong>The data you're requesting from us</strong>&nbsp;is used to build statistics about downloads and to track errors. These statistics do not contain any personal information. For example, when downloading a Manga, we may keep the ID of the downloaded Manga. These statistics may be shared with third parties.</li>
                 </ul>
                 <p>These data are stored on-premises and are never stored outside of our infrastructure. Personal Identifiable Information will be wiped one month after it has been logged.</p>
+            </div>
+            <div class="col-md-12">
+                <h2>Everything else</h2>
+                <p>We are not affiliated in any way to MangaDex. And&nbsp;<a href="https://github.com/Proxymiity/MangaDex.zip">we're open source</a>, come roast the developer (and open issues for bug reports and feature requests).</p>
             </div>
         </div>
     </div>
