--- a/MangaDexZip/web/index.html
+++ b/MangaDexZip/web/index.html
@@ -39,11 +39,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2>Additional info</h2>
+                <h2>Additional options</h2>
                 <p>When downloading a Manga, the default language when looking for chapters is <strong>English</strong>. To override this, simply add the following to the end of your address bar:&nbsp;<code><strong>?lang=LANG</strong></code>&nbsp;where&nbsp;<code>LANG</code>&nbsp;is a valid MangaDex language tag, i.e.:&nbsp;<code>?lang=fr</code></p>
                 <p>When downloading a Manga or Chapter, you can always download a slimmed down, lighter version of it by appending the following to the end of your address bar:&nbsp;<code><strong>?light=1</strong></code></p>
+                <p>When downloading a Manga, you can automatically append chapter titles by adding the following to the end of your address bar:&nbsp;<code><strong>?title=1</strong></code></p>
                 <p><strong>NB: </strong>If you're adding multiple parameters, be sure to name the first one after a&nbsp;<code>?</code>, and the subsequent parameters with a&nbsp;<code>&amp;</code>. Here's an example:&nbsp;<code>https://<strong>mangadex.zip</strong>/title/b9797c5b-642e-44d9-ac40-8b31b9ae110a<strong>?lang=fr&amp;light=1</strong></code></p>
-                <p>Selecting a primary translation group, automatically appending the chapter's title or only download a range of chapters are planned features and will be coming soon.</p>
+                <p>Selecting a primary translation group or only downloading a range of chapters are planned features and will be coming soon.</p>
             </div>
             <div class="col-md-12">
                 <h2>Limitations</h2>
