Added ranged downloads

--- a/MangaDexZip/web/index.html
+++ b/MangaDexZip/web/index.html
@@ -44,8 +44,8 @@
                 <p>When downloading a Manga or Chapter, you can always download a slimmed down, lighter version of it by appending the following to the end of your address bar:&nbsp;<code><strong>?light=1</strong></code></p>
                 <p>When downloading a Manga, you can automatically append chapter titles by adding the following to the end of your address bar:&nbsp;<code><strong>?title=1</strong></code></p>
                 <p>When downloading a Manga, you can select one or more preferred Groups, by order of preference, by adding&nbsp;<code><strong>?group=ID</strong></code>&nbsp;to the end of the address bar. You can repeat that argument, and the furthermost left will be considered first. You can get a Group's ID when viewing it on MangaDex, in your address bar. If some chapters aren't available from one of your preferred Groups, it will be substituted with another Group. To disable that behavior, you can add&nbsp;<code><strong>&amp;group_only=1</strong></code>&nbsp;to the end of the address bar.</p>
+                <p>When downloading a Manga, you can also choose a range of chapters to download (i.e. only downloading chapters 50-100) by adding the&nbsp;<code><strong>?start=X</strong></code>&nbsp;and&nbsp;<code><strong>&amp;end=Y</strong></code>&nbsp;parameters to the end of the address bar. One does not require the other, and they can also be used simultaneously.</p>
                 <p><strong>NB: </strong>If you're adding multiple parameters, be sure to name the first one after a&nbsp;<code>?</code>, and the subsequent parameters with a&nbsp;<code>&amp;</code>. Here's an example:&nbsp;<code>https://<strong>mangadex.zip</strong>/title/b9797c5b-642e-44d9-ac40-8b31b9ae110a<strong>?lang=fr&amp;light=1</strong></code></p>
-                <p>Downloading a range of chapters is a planned feature and will be coming soon.</p>
             </div>
             <div class="col-md-12">
                 <h2>Limitations</h2>
