Added some 'contact info' regarding hosting part of mdzip infra

--- a/MangaDexZip/web/index.html
+++ b/MangaDexZip/web/index.html
@@ -51,6 +51,7 @@
                 <h2>Limitations</h2>
                 <p>This entire site counts as "one" entity when downloading from MangaDex. As such, we had to develop a Fair-Queue system.</p>
                 <p>Any download is considered a "task". You may have as many tasks as you wish in the queue, but they will be processed in a round-robin fashion. Said queue is shared with with multiple users.</p>
+                <p>If you would like to provide us some of your infrastructure (hosting a forward-proxy to MangaDex or a MangaDex.zip Worker), please&nbsp;<a href="https://discord.com/users/278230133176008704">contact the maintainer on Discord</a>&nbsp;to arrange something out.</p>
             </div>
             <div class="col-md-12">
                 <h2>Hello, developers</h2>
